@@ -91,3 +91,9 @@ is `".kibana"`
 
 The Elasticsearch index name. This setting overwrites the index name defined
 in the dashboards and index pattern. Example: `"testbeat-*"`
+
+[float]
+==== `setup.dashboards.always_kibana`
+
+Force loading of dashboards using the Kibana API without querying Elasticsearch for the version
+The default is `false`.
